# EP2-PokemonMapReduce

./: .replit  join.csv  main.py  pyproject.toml  result.txt
